--- a/sales-System/src/app/component/client/client.component.html
+++ b/sales-System/src/app/component/client/client.component.html
@@ -1,1 +1,4 @@
-<p>client works!</p>
+<router-outlet></router-outlet>
+<div style="width: 100%; height: 100%;" [hidden]="route.children.length!==0">
+  <app-list></app-list>
+</div>
